k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
  namespace: sample-app
  labels:
    app: sample-app
    release: "1.0"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io.port: "8080"
spec:
  ports:
  - port: 8080
  type: ClusterIP
  selector:
    app: sample-app
    release: "1.0"
