k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: sample-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: sample-app.34.101.175.109.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app-svc
                port:
                  number: 8080
